fixed left spacing on .top-header

--- a/src/app/schedule-header/schedule-header.component.scss
+++ b/src/app/schedule-header/schedule-header.component.scss
@@ -1,5 +1,9 @@
 @import 'src/sass/components/_variables.scss';
 
+.top-header {
+	margin-left: 30px;
+}
+
 .schedule-container {
 	height: 90px;
 }
